--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
         "web3": "^1.3.5"
     },
     "scripts": {
-        "dev": "craco start",
-        "build": "craco build",
-        "test": "craco test",
+        "dev": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -45,9 +45,7 @@
         ]
     },
     "devDependencies": {
-        "@craco/craco": "^6.1.1",
         "chai": "^4.3.4",
-        "chai-as-promised": "^7.1.1",
-        "craco-esbuild": "^0.3.1"
+        "chai-as-promised": "^7.1.1"
     }
 }
